src/app/globals.css
@import "tailwindcss";

@theme {
  --font-barlow: var(--font-barlow), ui-sans-serif, system-ui, sans-serif;
  --font-mono: var(--font-geist-mono), ui-monospace, monospace;
  --font-geist: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif;
  --font-outfit: var(--font-outfit), ui-sans-serif, system-ui, sans-serif;

  --animate-scroll: scroll 20s linear infinite;

  @keyframes scroll {
    from {
      transform: translateX(0);
    }
    to {
      transform: translateX(-50%);
    }
  }
}

html {
  scroll-behavior: smooth;
}

